Actualizadas explicaciones a las practicas nuevas

--- a/Practica3/Parte3/explicacion.tex
+++ b/Practica3/Parte3/explicacion.tex
@@ -99,8 +99,8 @@
  \begin{itemize}
    \item Sy/As: 0 = Síncrona / 1 = Asíncrona
    \item Vb: Velocidad: 0 = 6 baudios/ 1 = 18 baudios
-   \item TxEN: TxRDY 0 = inactivo / 1 = activo
-   \item RxEN: RxRDY 0 = inactivo / 1 = activo
+   \item TxEN: Interrupción por TxRDY:  0 = inactivo / 1 = activo
+   \item RxEN: Interrupción por RxRDY:  0 = inactivo / 1 = activo
    \item DTR: Data Terminal Ready, 0 inactivo, 1 activo
    \item RTS: Request to Send, 0 inactivo, 1 activo
    \item ER: Error Reset, 1 = Resetea flags de errores
@@ -144,6 +144,15 @@
 \end{itemize}
 \end{frame}
 
+\subsection{Conexión}
+\begin{frame}[fragile]
+\frametitle{Conexion USART - Impresora Serie}
+\begin{center}
+ \includegraphics[scale=1.00]{conexion_usart.png}
+\end{center}
+
+\end{frame}
+
 \section{Impresora Serie}
 \subsection{Introducción}
 \begin{frame}[fragile]
@@ -163,20 +172,11 @@
  \end{itemize}
   \item Dos protocolos de Comunicación
 \begin{itemize}
- \item Software XON/XOFF
  \item Hardware DTR
+ \item Software XON/XOFF
 \end{itemize}
 \item Cambiamos la velocidad de la impresora con el comando ''vi''
 \end{itemize}
-\end{frame}
-
-\subsection{Conexión}
-\begin{frame}[fragile]
-\frametitle{Conexion USART - Impresora Serie}
-\begin{center}
- \includegraphics[scale=1.00]{conexion_usart.png}
-\end{center}
-
 \end{frame}
 
 \begin{frame}[fragile]
@@ -193,6 +193,20 @@
 \end{frame}
 
 \section{Protocolos de Comunicación}
+\subsection{Hardware DTR}
+\begin{frame}[fragile]
+\frametitle{DTR}
+\begin{itemize}
+ \item Configurar la impresora para usar el protocolo DTR usando el comado `` pi d'' 
+ \item La línea DTR indica si se debe iniciar/suspender la transmisión de datos.
+ \item Si el buffer esta lleno, la impresora pone 0 en la línea DTR.
+ \item Si el buffer tiene lugar, la impresora pone 1 en la línea DTR.
+ \item Puede ser mediante Interrupciones o consulta de estado
+ \item La línea DTR de la impresora está conectada a la linea DSR de la USART
+\end{itemize}
+
+\end{frame}
+
 \subsection{Software XON/XOFF}
 \begin{frame}[fragile]
 \frametitle{XON/XOFF}
@@ -208,18 +222,7 @@
 
 \end{frame}
 
-\subsection{Hardware DTR}
-\begin{frame}[fragile]
-\frametitle{DTR}
-\begin{itemize}
- \item Configurar la impresora para usar el protocolo DTR usando el comado `` pi d'' 
- \item La línea DTR indica si se debe iniciar/suspender la transmisión de datos.
- \item Si el buffer esta lleno, la impresora pone 0 en la línea DTR.
- \item Si el buffer tiene lugar, la impresora pone 1 en la línea DTR.
- \item Puede ser mediante Interrupciones o consulta de estado
-\end{itemize}
 
-\end{frame}
 
 \section{Protocolo DTR por Consulta de Estado}
 
@@ -262,7 +265,9 @@
  \item  Consultamos para saber si esta lista para recibir un carácter. Se deben dar estas condiciones:
  \begin{itemize}
   \item Data Set Ready = 1, la impresora debe estar lista para recibir carácter (bit de estado 7)
+  \item DSR está conectada a la línea DTR de la impresora
   \item TxRDY = 1, la USART debe estar lista para transmitir (bit de estado 0) 
+  \item TxRDY vale 1 si CTS vale 1 y no se esta trasmitiendo ya algun dato
  \end{itemize}
 \item Transmitimos el siguiente carácter 
 \item Volvemos a empezar si nos quedan mas caracteres a enviar a la impresora.
@@ -311,7 +316,7 @@ TEST: IN AL, CTRL
 \frametitle{Ejercicio}
 
 \begin{itemize}
- \item Veamos el Ejercicio 10 de la Práctica
+ \item Veamos el Ejercicio 4b de la Práctica
 \end{itemize}
 
 \end{frame}
@@ -365,7 +370,7 @@ TEST: IN AL, CTRL
  \item Es decir RxRDY cambia a 1
 \end{itemize}
 \item Si no recibimos un carácter, podemos enviar el siguiente carácter
-\item Si recibimos un carácter, puede ser XON o XOFF
+\item Si recibimos un carácter, puede ser XON (11h) o XOFF (13h)
 \begin{itemize}
 \item Si recibimos XON, podemos seguir imprimiendo.
 \item Si recibimos XOFF, hay que esperar hasta recibir XON para poder imprimir.
@@ -437,13 +442,11 @@ TEST:  IN AL, CTRL
 
 \end{frame}
 
-\end{document}
-
 \begin{frame}[fragile]
 \frametitle{Ejercicio}
 
 \begin{itemize}
- \item Veamos el Ejercicio 11 de la Práctica
+ \item Veamos el Ejercicio 4c de la Práctica
 \end{itemize}
 
 \end{frame}
