--- a/Practica3/Parte4/explicacion.tex
+++ b/Practica3/Parte4/explicacion.tex
@@ -111,7 +111,7 @@
 	      \item 0: Transferencia en Curso
 	      \item 1: Transferencia detenida por la CPU
 	  \end{itemize}
-        \item \emph{TC}:
+        \item \emph{TC}: Terminal Count
 	  \begin{itemize}
 	      \item 0: Transferencia no finalizada
 	      \item 1: Transferencia ya finalizada
