Correcciones ala explicacion de la practica 3 USAR (gracias Igancio T)

--- a/Practica3/Parte3/explicacion.tex
+++ b/Practica3/Parte3/explicacion.tex
@@ -389,7 +389,7 @@ TEST: IN AL, CTRL
            
 TEST:  IN AL, CTRL
        AND AL, 1
-       JNZ TEST
+       JZ TEST
              
  \end{verbatim}
 \end{block}
